--- a/Jelly/lhylibrary/build.gradle
+++ b/Jelly/lhylibrary/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 24
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
 
@@ -48,5 +48,7 @@ dependencies {
     compile('com.github.ihsanbal:LoggingInterceptor:2.0.0') {
         exclude group: 'org.json', module: 'json'
     }
+    compile 'com.github.bumptech.glide:glide:4.0.0'
+    compile 'com.github.lovetuzitong:MultiImageSelector:1.2'
 
 }
