--- a/Jelly/lhylibrary/src/main/AndroidManifest.xml
+++ b/Jelly/lhylibrary/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 
     <application android:allowBackup="true" android:label="@string/app_name"
         android:supportsRtl="true">
-
+        <activity android:name=".activity.ShowPhotoActivity" android:theme="@style/Transparent" />
     </application>
 
 </manifest>
