--- a/Jelly/lhylibrary/build.gradle
+++ b/Jelly/lhylibrary/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 22
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
 
@@ -50,5 +50,5 @@ dependencies {
     }
     compile 'com.github.bumptech.glide:glide:4.0.0'
     compile 'com.github.lovetuzitong:MultiImageSelector:1.2'
-
+    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.22'
 }
