--- a/Jelly/lhylibrary/src/main/AndroidManifest.xml
+++ b/Jelly/lhylibrary/src/main/AndroidManifest.xml
@@ -1,8 +1,13 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="lhy.lhylibrary">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="lhy.lhylibrary">
 
-    <application android:allowBackup="true" android:label="@string/app_name"
+    <application
+        android:allowBackup="true"
+        android:label="@string/app_name"
         android:supportsRtl="true">
-        <activity android:name=".activity.ShowPhotoActivity" android:theme="@style/Transparent" />
+        <activity
+            android:name=".activity.ShowPhotoActivity"
+            android:theme="@style/Transparent" />
     </application>
 
 </manifest>
