--- a/Jelly/app/build.gradle
+++ b/Jelly/app/build.gradle
@@ -85,4 +85,5 @@ dependencies {
     compile 'com.netease.nimlib:lucene:3.3.0'
     compile files('libs/AMap3DMap_5.3.0_AMapNavi_5.3.0_AMapSearch_5.3.1_AMapLocation_3.5.0_20170817.jar')
     compile 'com.android.support:multidex:1.0.0'
+    compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.3'
 }
