--- a/Jelly/build.gradle
+++ b/Jelly/build.gradle
@@ -19,6 +19,7 @@ allprojects {
         jcenter()
         mavenCentral()
         maven { url "https://jitpack.io" }
+        maven { url "https://maven.google.com" }
     }
 }
 
