--- a/Jelly/ijkplayer/build.gradle
+++ b/Jelly/ijkplayer/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 26
+    buildToolsVersion "27.0.3"
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
 
@@ -35,16 +35,16 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    testCompile 'junit:junit:4.12'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    testImplementation 'junit:junit:4.12'
 
     // required, enough for most devices.
-    compile 'tv.danmaku.ijk.media:ijkplayer-java:0.8.2'
-    compile 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.8.2'
+    implementation 'tv.danmaku.ijk.media:ijkplayer-java:0.8.2'
+    implementation 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.8.2'
 //    compile 'tv.danmaku.ijk.media:ijkplayer-armv5:0.8.2'
 //    compile 'tv.danmaku.ijk.media:ijkplayer-arm64:0.8.2'
 //    compile 'tv.danmaku.ijk.media:ijkplayer-x86:0.8.2'
