--- a/Jelly/app/build.gradle
+++ b/Jelly/app/build.gradle
@@ -59,6 +59,13 @@ android {
     configurations.all {
         resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
     }
+
+    lintOptions {
+        checkReleaseBuilds false
+        // Or, if you prefer, you can continue to check for errors in release builds,
+        // but continue the build even when errors are found:
+        abortOnError false
+    }
 }
 
 repositories {
@@ -71,19 +78,18 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
     testImplementation 'junit:junit:4.12'
     implementation 'org.greenrobot:greendao:3.2.2'
+    implementation 'com.google.dagger:dagger:2.11'
     implementation 'com.google.dagger:dagger-android:2.11'
     implementation 'com.google.dagger:dagger-android-support:2.11'
-    // if you use the support libraries
     annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
-    //一定要添加dagger2的annotationProcessor！
     annotationProcessor 'com.google.dagger:dagger-android-processor:2.11'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation 'com.jakewharton:butterknife:8.8.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.0'
     //     添加依赖。注意，版本号必须一致。
     //     基础功能 (必需)
     implementation 'com.netease.nimlib:basesdk:3.3.0'
@@ -96,8 +102,9 @@ dependencies {
     // 全文检索服务需要
     implementation 'com.netease.nimlib:lucene:3.3.0'
     implementation 'com.android.support:multidex:1.0.3'
-    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.3'
+
     implementation project(':ijkplayer')
     implementation project(':zxinglibrary')
     implementation project(':lhylibrary')
+    implementation "android.arch.lifecycle:runtime:1.1.1"
 }
