--- a/Jelly/ijkplayer/build.gradle
+++ b/Jelly/ijkplayer/build.gradle
@@ -35,16 +35,16 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    api fileTree(dir: 'libs', include: ['*.jar'])
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation 'com.android.support:appcompat-v7:27.1.1'
+    compileOnly 'com.android.support:appcompat-v7:26.1.0'
     testImplementation 'junit:junit:4.12'
 
     // required, enough for most devices.
-    implementation 'tv.danmaku.ijk.media:ijkplayer-java:0.8.2'
-    implementation 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.8.2'
+    api 'tv.danmaku.ijk.media:ijkplayer-java:0.8.2'
+    api 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.8.2'
 //    compile 'tv.danmaku.ijk.media:ijkplayer-armv5:0.8.2'
 //    compile 'tv.danmaku.ijk.media:ijkplayer-arm64:0.8.2'
 //    compile 'tv.danmaku.ijk.media:ijkplayer-x86:0.8.2'
