--- a/Jelly/lhylibrary/build.gradle
+++ b/Jelly/lhylibrary/build.gradle
@@ -15,7 +15,11 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -26,28 +30,30 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testImplementation 'junit:junit:4.12'
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:design:27.1.1'
-    //rxjava2
-    api 'io.reactivex.rxjava2:rxjava:2.1.0'
+    compileOnly 'com.android.support:appcompat-v7:26.1.0'
+    compileOnly 'com.android.support:design:26.1.0'
+//    rxjava2
+    api 'io.reactivex.rxjava2:rxjava:2.1.3'
     api 'io.reactivex.rxjava2:rxandroid:2.0.1'
     //rxife
-    api 'com.trello.rxlifecycle2:rxlifecycle:2.1.0'
-    api 'com.trello.rxlifecycle2:rxlifecycle-android:2.1.0'
-    api 'com.trello.rxlifecycle2:rxlifecycle-components:2.1.0'
+    api 'com.trello.rxlifecycle2:rxlifecycle:2.2.1'
+    api 'com.trello.rxlifecycle2:rxlifecycle-android:2.2.1'
+    api 'com.trello.rxlifecycle2:rxlifecycle-components:2.2.1'
     //retrofit2
     api 'com.squareup.retrofit2:retrofit:2.3.0'
     api 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     api 'com.squareup.retrofit2:converter-gson:2.3.0'
     //权限管理
     api 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar'
-    api 'com.orhanobut:logger:1.15'
+    api 'com.orhanobut:logger:2.2.0'
     api('com.github.ihsanbal:LoggingInterceptor:2.0.0') {
         exclude group: 'org.json', module: 'json'
     }
-    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    api 'com.github.bumptech.glide:glide:4.7.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
     api 'com.github.lovetuzitong:MultiImageSelector:1.2'
-    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.22'
+    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
+    api 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.5.1'
     api 'com.liulishuo.filedownloader:library:1.6.5'
+    api 'top.zibin:Luban:1.1.3'
 }
