--- a/Jelly/zxinglibrary/build.gradle
+++ b/Jelly/zxinglibrary/build.gradle
@@ -26,6 +26,6 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testImplementation 'junit:junit:4.12'
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation files('libs/core-3.1.1-SNAPSHOT.jar')
+    compileOnly 'com.android.support:appcompat-v7:26.1.0'
+    api files('libs/core-3.1.1-SNAPSHOT.jar')
 }
