--- a/Jelly/app/build.gradle
+++ b/Jelly/app/build.gradle
@@ -106,5 +106,5 @@ dependencies {
     implementation project(':ijkplayer')
     implementation project(':zxinglibrary')
     implementation project(':lhylibrary')
-    implementation "android.arch.lifecycle:runtime:1.1.1"
+//    implementation "android.arch.lifecycle:runtime:1.1.1"
 }
