--- a/Jelly/app/src/main/AndroidManifest.xml
+++ b/Jelly/app/src/main/AndroidManifest.xml
@@ -29,8 +29,8 @@
     <!-- 接收 SDK 消息广播权限， 第三方 APP 接入时，请将 com.netease.nim.demo 替换为自己的包名 -->
     <permission
         android:name="lhy.jelly.permission.RECEIVE_MSG"
-        android:protectionLevel="signature"/>
-    <uses-permission android:name="lhy.jelly.permission.RECEIVE_MSG"/>
+        android:protectionLevel="signature" />
+    <uses-permission android:name="lhy.jelly.permission.RECEIVE_MSG" />
 
     <application
         android:name=".base.JellyApplicaiton"
@@ -49,44 +49,53 @@
         </activity>
         <activity android:name=".ui.main.MainActivity">
             <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
+            <!--<action android:name="android.intent.action.MAIN" />-->
 
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--<category android:name="android.intent.category.LAUNCHER" />-->
             <!--</intent-filter>-->
         </activity>
         <activity android:name=".ui.activity.MapActivity" />
+        <activity android:name=".ui.music.MusicPlayActivity" android:theme="@style/TransitionsTheme"/>
         <!--高德地图-->
-        <service android:name="com.amap.api.location.APSService" />
-        <meta-data
-            android:name="com.amap.api.v2.apikey"
-            android:value="fa2f0375ae4b99ba5e972d9a5b4f19de" />
+        <!--<service android:name="com.amap.api.location.APSService" />-->
+        <!--<meta-data-->
+            <!--android:name="com.amap.api.v2.apikey"-->
+            <!--android:value="fa2f0375ae4b99ba5e972d9a5b4f19de" />-->
 
-        <!--网易云信-->
+        <!--Umeng-->
+        <meta-data
+            android:name="UMENG_APPKEY"
+            android:value="5afe75d58f4a9d04d600003d" />
+        <!-- Channel ID用来标识App的推广渠道，作为推送消息时给用户分组的一个维度。-->
+        <meta-data
+            android:name="UMENG_CHANNEL"
+            android:value="${UMENG_CHANNEL_VALUE}" />
+
+        <!--IM-->
         <!-- APP key, 可以在这里设置，也可以在 SDKOptions 中提供。
            如果 SDKOptions 中提供了，取 SDKOptions 中的值。 -->
         <meta-data
             android:name="com.netease.nim.appKey"
-            android:value="f821e57ba587e5f5518f89a1634cae75" />
+            android:value="key_of_your_app" />
 
-        <!-- 声明网易云通信后台服务，如需保持后台推送，使用独立进程效果会更好。 -->
+        <!-- 云信后台服务，请使用独立进程。 -->
         <service
             android:name="com.netease.nimlib.service.NimService"
             android:process=":core"/>
 
-        <!--&lt;!&ndash; 运行后台辅助服务 &ndash;&gt;-->
-        <!--<service-->
-            <!--android:name="com.netease.nimlib.service.NimService$Aux"-->
-            <!--android:process=":core"/>-->
+        <!-- 云信后台辅助服务 -->
+        <service
+            android:name="com.netease.nimlib.service.NimService$Aux"
+            android:process=":core"/>
 
-        <!-- 声明网易云通信后台辅助服务 -->
+        <!-- 云信后台辅助服务 -->
         <service
             android:name="com.netease.nimlib.job.NIMJobService"
             android:exported="true"
             android:permission="android.permission.BIND_JOB_SERVICE"
             android:process=":core"/>
 
-        <!-- 网易云通信SDK的监视系统启动和网络变化的广播接收器，用户开机自启动以及网络变化时候重新登录，
-            保持和 NimService 同一进程 -->
+        <!-- 云信监视系统启动和网络变化的广播接收器，保持和 NimService 同一进程 -->
         <receiver android:name="com.netease.nimlib.service.NimReceiver"
             android:process=":core"
             android:exported="false">
@@ -96,32 +105,19 @@
             </intent-filter>
         </receiver>
 
-        <!-- 网易云通信进程间通信 Receiver -->
+        <!-- 云信进程间通信 Receiver -->
         <receiver android:name="com.netease.nimlib.service.ResponseReceiver"/>
 
-        <!-- 网易云通信进程间通信service -->
+        <!-- 云信进程间通信service -->
         <service android:name="com.netease.nimlib.service.ResponseService"/>
 
-        <!-- 安卓保活配置 -->
-        <service
-            android:name="com.netease.cosine.core.CosineService"
-            android:process=":cosine">
-        </service>
-
-        <service android:name=".service.UserService"/>
-
-        <receiver
-            android:name="com.netease.cosine.target.CosineReceiver"
-            android:exported="true"
-            android:process=":cosine">
-        </receiver>
-
-        <meta-data
-            android:name="com.netease.cosine.target"
-            android:value=""/>
-        <meta-data
-            android:name="com.netease.cosine.target.receiver"
-            android:value="com.netease.nimlib.service.NimReceiver"/>
+        <!-- 云信进程间通信provider -->
+        <!-- android:authorities="{包名}.ipc.provider", 请将com.netease.nim.demo替换为自己的包名 -->
+        <provider
+            android:name="com.netease.nimlib.ipc.NIMContentProvider"
+            android:authorities="lhy.jelly.ipc.provider"
+            android:exported="false"
+            android:process=":core" />
     </application>
 
 </manifest>
