--- a/Jelly/app/build.gradle
+++ b/Jelly/app/build.gradle
@@ -76,9 +76,7 @@ android {
     defaultConfig {
         ndk {
             //设置支持的SO库架构
-            abiFilters "armeabi"
-//            , "armeabi-v7a"
-//                 "armeabi-v7a",  "x86","arm64-v8a","x86_64"
+            abiFilters "armeabi" ,"armeabi-v7a", "x86"
         }
     }
     configurations.all {
