--- a/Jelly/app/src/main/AndroidManifest.xml
+++ b/Jelly/app/src/main/AndroidManifest.xml
@@ -41,18 +41,18 @@
         android:theme="@style/AppTheme"
         tools:replace="android:icon,android:theme,android:allowBackup">
         <activity android:name=".ui.login.LoginActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
         </activity>
         <activity android:name=".ui.main.MainActivity">
-            <!--<intent-filter>-->
-            <!--<action android:name="android.intent.action.MAIN" />-->
+            <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
 
-            <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
+            <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity android:name=".ui.activity.MapActivity" />
         <activity android:name=".ui.music.MusicPlayActivity" android:theme="@style/TransitionsTheme"/>
@@ -118,6 +118,8 @@
             android:authorities="lhy.jelly.ipc.provider"
             android:exported="false"
             android:process=":core" />
+        <!--me-->
+        <service android:name=".service.MusicService" />
     </application>
 
 </manifest>
