--- a/Jelly/ijkplayer/build.gradle
+++ b/Jelly/ijkplayer/build.gradle
@@ -24,14 +24,12 @@ android {
             jniLibs.srcDirs = ['libs']
         }
     }
-//    defaultConfig {
-//        ndk {
-//            //设置支持的SO库架构
-//            abiFilters "armeabi"
-////            , "armeabi-v7a"
-////                 "armeabi-v7a",  "x86","arm64-v8a","x86_64"
-//        }
-//    }
+    defaultConfig {
+        ndk {
+            //设置支持的SO库架构
+            abiFilters "armeabi", "armeabi-v7a", "x86"
+        }
+    }
 }
 
 dependencies {
@@ -42,11 +40,16 @@ dependencies {
     compileOnly 'com.android.support:appcompat-v7:26.1.0'
     testImplementation 'junit:junit:4.12'
 
-    // required, enough for most devices.
-    api 'tv.danmaku.ijk.media:ijkplayer-java:0.8.2'
-    api 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.8.2'
-//    compile 'tv.danmaku.ijk.media:ijkplayer-armv5:0.8.2'
-//    compile 'tv.danmaku.ijk.media:ijkplayer-arm64:0.8.2'
-//    compile 'tv.danmaku.ijk.media:ijkplayer-x86:0.8.2'
-//    compile 'tv.danmaku.ijk.media:ijkplayer-x86_64:0.8.2'
+//    # required, enough for most devices.
+    api 'tv.danmaku.ijk.media:ijkplayer-java:0.8.8'
+    api 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.8.8'
+
+////    # Other ABIs: optional
+//    api 'tv.danmaku.ijk.media:ijkplayer-armv5:0.8.8'
+//    api 'tv.danmaku.ijk.media:ijkplayer-arm64:0.8.8'
+//    api 'tv.danmaku.ijk.media:ijkplayer-x86:0.8.8'
+//    api 'tv.danmaku.ijk.media:ijkplayer-x86_64:0.8.8'
+//
+////    # ExoPlayer as IMediaPlayer: optional, experimental
+//    api 'tv.danmaku.ijk.media:ijkplayer-exo:0.8.8'
 }
