--- a/Jelly/app/build.gradle
+++ b/Jelly/app/build.gradle
@@ -144,4 +144,6 @@ dependencies {
     api 'com.umeng.sdk:push:4.1.0'
     api 'cn.jzvd:jiaozivideoplayer:6.2.10'
     api 'com.github.xiaoyanger0825:NiceVieoPlayer:v2.2'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
+    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
 }
