--- a/Jelly/app/build.gradle
+++ b/Jelly/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 apply plugin: 'org.greenrobot.greendao'
-//apply plugin: 'com.jakewharton.butterknife'
+//apply plugin: 'me.tatarka.retrolambda'
 
 android {
     signingConfigs {
         release {
             keyPassword '999999999'
-            storeFile file('G:/jellyApp/jelly(999999999).jks')
+            storeFile file('../jelly(999999999).jks')
             storePassword '999999999'
             keyAlias 'key_release'
         }
@@ -38,10 +38,7 @@ android {
         daoPackage 'lhy.jelly.data.local.gen'
         targetGenDir 'src/main/java'
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
-    }
+
     productFlavors {
         tencent {
             manifestPlaceholders = [UMENG_CHANNEL_VALUE: "tencent"]
@@ -73,12 +70,13 @@ android {
             jniLibs.srcDirs = ['libs']
         }
     }
-    defaultConfig {
-        ndk {
-            //设置支持的SO库架构
-            abiFilters "armeabi-v7a"
-        }
-    }
+
+//    defaultConfig {
+//        ndk {
+//            //设置支持的SO库架构
+//            abiFilters "armeabi"
+//        }
+//    }
 
     configurations.all {
         resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
@@ -89,6 +87,11 @@ android {
         // Or, if you prefer, you can continue to check for errors in release builds,
         // but continue the build even when errors are found:
         abortOnError false
+    }
+    
+    compileOptions {
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
     }
 }
 
@@ -102,18 +105,14 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support:design:26.1.0'
-    testImplementation 'junit:junit:4.12'
-    implementation 'org.greenrobot:greendao:3.2.2'
-    implementation 'com.google.dagger:dagger:2.11'
-    implementation 'com.google.dagger:dagger-android:2.11'
-    implementation 'com.google.dagger:dagger-android-support:2.11'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
-    annotationProcessor 'com.google.dagger:dagger-android-processor:2.11'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.jakewharton:butterknife:8.8.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.0'
+    implementation deps.support.v7
+    implementation deps.support.design
+    testImplementation deps.junit
+    implementation deps.greendao
+    annotationProcessor deps.dagger.compiler
+    annotationProcessor deps.dagger.android_processor
+    annotationProcessor deps.butterknife.butterknife_compiler
+
 
     implementation 'com.android.support:multidex:1.0.3'
     implementation project(':ijkplayer')
@@ -131,10 +130,7 @@ dependencies {
 
     implementation  'cn.jzvd:jiaozivideoplayer:6.2.10'
     api 'com.github.xiaoyanger0825:NiceVieoPlayer:v2.2'
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
-    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
     implementation project(':uikit')
     implementation 'q.rorbin:badgeview:1.1.3'
-    implementation "android.arch.lifecycle:extensions:1.1.1"
-    annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
+//    retrolambdaConfig "net.orfjackal.retrolambda:retrolambda:2.3.0"
 }
