--- a/Jelly/build.gradle
+++ b/Jelly/build.gradle
@@ -9,6 +9,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.3'
         classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
+//        classpath 'me.tatarka:gradle-retrolambda:3.2.4'
 //        classpath 'com.jakewharton:butterknife-gradle-plugin:8.4.0'
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -43,15 +44,16 @@ ext {
     sdkTargetCompatibility = 1.7
     appSourceCompatibility = 1.7
     appTargetCompatibility = 1.7
+    supportLibrary = '28.0.0'
 }
 
-subprojects {
-    project.configurations.all {
-        resolutionStrategy.eachDependency { details ->
-            if (details.requested.group == 'com.android.support'
-                    && !details.requested.name.contains('multidex') ) {
-                details.useVersion "27.1.1"
-            }
-        }
-    }
-}
+//subprojects {
+//    project.configurations.all {
+//        resolutionStrategy.eachDependency { details ->
+//            if (details.requested.group == 'com.android.support'
+//                    && !details.requested.name.contains('multidex') ) {
+//                details.useVersion "27.1.1"
+//            }
+//        }
+//    }
+//}
