--- a/Jelly/lhylibrary/src/main/AndroidManifest.xml
+++ b/Jelly/lhylibrary/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
     package="lhy.lhylibrary">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
@@ -17,9 +19,6 @@
             android:finishOnTaskLaunch="false"
             android:launchMode="singleInstance"
             android:theme="@style/Transparent" />
-        <!--<service-->
-        <!--android:name=".service.AliveService"-->
-        <!--android:process=":alive_service"/>-->
         <service
             android:name=".service.AliveService$InnerService"
             android:process=":alive_service" />
