--- a/Jelly/versions.gradle
+++ b/Jelly/versions.gradle
@@ -15,35 +15,118 @@
  */
 
 
-
-
 /**
-* Shared file between builds so that they can all use the same dependencies and
-* maven repositories.
-**/
+ * Shared file between builds so that they can all use the same dependencies and
+ * maven repositories.
+ **/
 ext.deps = [:]
 def versions = [:]
 versions.versionName = "1.0"
-//versions.arch_core = "1.1.0"
+versions.ersionCode = 1
+versions.arch_core = "1.1.0"
+versions.compileSdkVersion = 26
+versions.buildToolsVersion = '27.0.3'
+versions.minSdkVersion = 16
+versions.targetSdkVersion = 26
+versions.appTargetSdkVersion = 26
+versions.sdkSourceCompatibility = 1.7
+versions.sdkTargetCompatibility = 1.7
+versions.appSourceCompatibility = 1.7
+versions.appTargetCompatibility = 1.7
+versions.support = '27.1.1'
+versions.junit = "4.12"
+versions.dagger = "2.11"
+versions.retrofit = "2.3.0"
+versions.rxjava2 = "2.1.3"
+versions.rx_android = "2.0.1"
+versions.android_gradle_plugin = "3.0.1"
+versions.constraint_layout = "1.0.2"
+versions.glide = "4.7.1"
+versions.greendao = "3.2.2"
+versions.butterknife = "8.8.0"
+versions.leankcanary = "1.5.4"
+versions.rxlifecycle = "2.2.1"
+versions.okhttp_logging_interceptor = "3.9.0"
+ext.versions = versions;
+
+deps.constraint_layout = "com.android.support.constraint:constraint-layout:$versions.constraint_layout"
+deps.junit = "junit:junit:$versions.junit"
+deps.greendao = "org.greenrobot:greendao:$versions.greendao"
+deps.luban = "top.zibin:Luban:1.1.3"
+deps.filedownloader = "com.liulishuo.filedownloader:library:1.6.5"
+deps.smartRefreshLayout = "com.scwang.smartrefresh:SmartRefreshLayout:1.0.5.1"
+deps.baseRecyclerViewAdapterHelper = "com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30"
+deps.multiImageSelector = "com.github.lovetuzitong:MultiImageSelector:1.2"
+deps.rxpermissions = "com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar"
+deps.logger = "com.orhanobut:logger:2.2.0"
+deps.lifecycle_extensions = "android.arch.lifecycle:extensions:1.1.1"
+
+def support = [:]
+support.annotations = "com.android.support:support-annotations:$versions.support"
+support.v7 = "com.android.support:appcompat-v7:$versions.support"
+support.recyclerview = "com.android.support:recyclerview-v7:$versions.support"
+support.cardview = "com.android.support:cardview-v7:$versions.support"
+support.design = "com.android.support:design:$versions.support"
+support.v4 = "com.android.support:support-v4:$versions.support"
+support.core_utils = "com.android.support:support-core-utils:$versions.support"
+deps.support = support
+
+def retrofit = [:]
+retrofit.retrofit = "com.squareup.retrofit2:retrofit:$versions.retrofit"
+retrofit.gson = "com.squareup.retrofit2:converter-gson:$versions.retrofit"
+retrofit.mock = "com.squareup.retrofit2:retrofit-mock:$versions.retrofit"
+retrofit.rxjava2_adapter = "com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0"
+retrofit.okhttp_logging_interceptor = "com.squareup.okhttp3:logging-interceptor:$versions.okhttp_logging_interceptor"
+deps.retrofit = retrofit
+
+def dagger = [:]
+dagger.dagger = "com.google.dagger:dagger:$versions.dagger"
+dagger.android = "com.google.dagger:dagger-android:$versions.dagger"
+dagger.android_support = "com.google.dagger:dagger-android-support:$versions.dagger"
+dagger.compiler = "com.google.dagger:dagger-compiler:$versions.dagger"
+dagger.android_processor = "com.google.dagger:dagger-android-processor:$versions.dagger"
+deps.dagger = dagger
+
+def butterknife = [:]
+butterknife.butterknife = "com.jakewharton:butterknife:$versions.butterknife"
+butterknife.butterknife_compiler = "com.jakewharton:butterknife-compiler:$versions.butterknife"
+deps.butterknife = butterknife
+
+def leakcanary = [:]
+leakcanary.android_debug = "com.squareup.leakcanary:leakcanary-android:$versions.leankcanary"
+leakcanary.android_release = "com.squareup.leakcanary:leakcanary-android-no-op:$versions.leankcanary"
+deps.leakcanary = leakcanary
+
+def rxjava = [:]
+rxjava.rxjava = "io.reactivex.rxjava2:rxjava:$versions.rxjava2"
+rxjava.rxandroid = "io.reactivex.rxjava2:rxandroid:$versions.rx_android"
+deps.rxjava = rxjava
+
+def rxlifecycle2 = [:]
+rxlifecycle2.rxlifecycle = "com.trello.rxlifecycle2:rxlifecycle:$versions.rxlifecycle"
+rxlifecycle2.android = "com.trello.rxlifecycle2:rxlifecycle-android:$versions.rxlifecycle"
+rxlifecycle2.components = "com.trello.rxlifecycle2:rxlifecycle-components:$versions.rxlifecycle"
+deps.rxlifecycle2 = rxlifecycle2
+
+def glide = [:]
+glide.glide = "com.github.bumptech.glide:glide:$versions.glide"
+glide.compiler = "com.github.bumptech.glide:compiler:$versions.glide"
+deps.glide = glide
+
 //versions.room = "1.1.0-alpha1"
 //versions.lifecycle = "1.1.0"
 //versions.support = "26.1.0"
 //versions.dagger = "2.11"
-//versions.junit = "4.12"
 //versions.espresso = "3.0.1"
-//versions.retrofit = "2.3.0"
 //versions.okhttp_logging_interceptor = "3.9.0"
 //versions.mockwebserver = "3.8.1"
 //versions.apache_commons = "2.5"
 //versions.mockito = "2.7.19"
 //versions.mockito_all = "1.10.19"
 //versions.dexmaker = "2.2.0"
-//versions.constraint_layout = "1.0.2"
-//versions.glide = "3.8.0"
+
 //versions.timber = "4.5.1"
-//versions.android_gradle_plugin = "3.0.1"
-//versions.rxjava2 = "2.1.3"
-//versions.rx_android = "2.0.1"
+
 //versions.atsl_runner = "1.0.1"
 //versions.atsl_rules = "1.0.1"
 //versions.hamcrest = "1.3"
@@ -51,16 +134,7 @@ versions.versionName = "1.0"
 //versions.paging = "1.0.0-alpha5"
 //def deps = [:]
 //
-//def support = [:]
-//support.annotations = "com.android.support:support-annotations:$versions.support"
-//support.app_compat = "com.android.support:appcompat-v7:$versions.support"
-//support.recyclerview = "com.android.support:recyclerview-v7:$versions.support"
-//support.cardview = "com.android.support:cardview-v7:$versions.support"
-//support.design = "com.android.support:design:$versions.support"
-//support.v4 = "com.android.support:support-v4:$versions.support"
-//support.core_utils = "com.android.support:support-core-utils:$versions.support"
-//deps.support = support
-//
+
 //def room = [:]
 //room.runtime = "android.arch.persistence.room:runtime:$versions.room"
 //room.compiler = "android.arch.persistence.room:compiler:$versions.room"
@@ -120,7 +194,6 @@ versions.versionName = "1.0"
 //deps.paging = "android.arch.paging:runtime:$versions.paging"
 //deps.glide = "com.github.bumptech.glide:glide:$versions.glide"
 //deps.dexmaker = "com.linkedin.dexmaker:dexmaker-mockito:$versions.dexmaker"
-//deps.constraint_layout = "com.android.support.constraint:constraint-layout:$versions.constraint_layout"
 //deps.timber = "com.jakewharton.timber:timber:$versions.timber"
 //deps.junit = "junit:junit:$versions.junit"
 //deps.mock_web_server = "com.squareup.okhttp3:mockwebserver:$versions.mockwebserver"
