--- a/Jelly/zxinglibrary/build.gradle
+++ b/Jelly/zxinglibrary/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testImplementation 'junit:junit:4.12'
-    compileOnly 'com.android.support:appcompat-v7:26.1.0'
+    testImplementation  deps.junit
+    implementation deps.support.v7
     api files('libs/core-3.1.1-SNAPSHOT.jar')
 }
